# airflow_learning

./: README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
bash-scripts/: download-rocket-launches.sh
dags/: check-docker-code-runner.py
dags/airflow_book_dags/: rockets-dag.py  triggering_workflow.py
dags/data_ingestion_dag/: pipeline.py
