[tool.poetry]
name = "Online Store Data Eng"
version = "0.1.0"
description = "Building Data Pipeline for an Online store with problem statement from Satrt Data Engineering."
authors = ["Temiloluwa Awoyele <awoyeletemiloluwa@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
